--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/he": "^1.2.3",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -114,6 +115,7 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.5.1",
+    "he": "^1.2.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
