--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
+    "openai": "^4.78.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.2",
@@ -138,6 +139,5 @@
     "commitizen": {
       "path": "./node_modules/@ryansonshine/cz-conventional-changelog"
     }
-  },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
+  }
 }
