--- a/package.json
+++ b/package.json
@@ -106,8 +106,11 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@bull-board/api": "^6.9.2",
+    "@bull-board/express": "^6.9.2",
     "@types/he": "^1.2.3",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.51.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
