--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.11.12",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
@@ -109,6 +110,7 @@
     "@bull-board/api": "^6.9.2",
     "@bull-board/express": "^6.9.2",
     "@types/he": "^1.2.3",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.51.1",
     "compression": "^1.7.4",
@@ -126,6 +128,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.9.15",
     "openai": "^4.78.1",
     "passport": "^0.6.0",
@@ -134,6 +137,7 @@
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
+    "uuid": "^11.1.0",
     "validator": "^13.7.0",
     "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
