--- a/package.json
+++ b/package.json
@@ -142,6 +142,10 @@
     "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
   },
+  "resolutions": {
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.31"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/@ryansonshine/cz-conventional-changelog"
