--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "he": "^1.2.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.5.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
