--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,104 @@
-version: '3'
+version: '3.8'
 
 services:
   mongo:
-    container_name: mongo
-    image: mongo:4.2.1-bionic
-    restart: always
+    container_name: unibuzz-mongo
+    image: mongo:6.0
+    restart: unless-stopped
     ports:
       - '27018:27017'
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    volumes:
+      - mongo_data:/data/db
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     networks:
       - backend
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+
+  redis:
+    container_name: unibuzz-redis
+    image: redis:7-alpine
+    restart: unless-stopped
+    command: redis-server --requirepass ${REDIS_PASSWORD:-redispassword}
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+    networks:
+      - backend
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.25'
+        reservations:
+          memory: 128M
+          cpus: '0.1'
+
   app:
-    container_name: ts-node-app
+    container_name: unibuzz-api
     build:
       context: .
       dockerfile: Dockerfile
       target: base
-    restart: always
+    restart: unless-stopped
     env_file: .env
     expose:
-      - ${PORT}
+      - ${PORT:-3000}
     ports:
-      - ${PORT}:${PORT}
+      - "${PORT:-3000}:${PORT:-3000}"
     environment:
-      - MONGODB_URL=mongodb+srv://bacpactech:BACPAC2023@bacpac.e1tsleh.mongodb.net/bacpac
-      - CLIENT_URL=${CLIENT_URL}
-    links:
-      - mongo
+      - NODE_ENV=development
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-redispassword}
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:${PORT:-3000}/v1/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '0.5'
+        reservations:
+          memory: 512M
+          cpus: '0.25'
     networks:
       - backend
+
+volumes:
+  mongo_data:
+    driver: local
+  redis_data:
+    driver: local
 
 networks:
   backend:
