--- a/env.example
+++ b/env.example
@@ -37,4 +37,5 @@ REDIS_PASSWORD=redispassword
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_REGION=us-east-1
-AWS_S3_BUCKET_NAME=your-s3-bucket-name 
+AWS_S3_BUCKET_NAME=your-s3-bucket-name
+SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/123456789012/your-queue-name 
