--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.888.0",
     "@bull-board/api": "^6.9.2",
     "@bull-board/express": "^6.9.2",
     "@types/he": "^1.2.3",
