--- a/package.json
+++ b/package.json
@@ -145,8 +145,7 @@
     "uuid": "^11.1.0",
     "validator": "^13.7.0",
     "winston": "^3.3.3",
-    "xss-clean": "^0.1.1",
-    "yarn": "^1.22.22"
+    "xss-clean": "^0.1.1"
   },
   "resolutions": {
     "@types/express": "^4.17.13",
